preventing page jump take 21

--- a/app/styles/components/_henna1.scss
+++ b/app/styles/components/_henna1.scss
@@ -141,6 +141,7 @@
           height: 100%;
           overflow: auto;
           -webkit-overflow-scrolling: touch;
+          -webkit-backface-visibility: hidden;
 
           .rsvp {
             font-family: 'Great Vibes', cursive;
